updates: bold header, fix footer contact information first row alignment

--- a/asce1062/src/styles/global.css
+++ b/asce1062/src/styles/global.css
@@ -531,3 +531,7 @@ Share Notification (Global)
 		font-size: 0.875rem;
 	}
 }
+
+@view-transition {
+	navigation: auto;
+}
